--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,31 +1,34 @@
-.content{
+.content {
     margin-top: 100px;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-.navigation{
+.navigation {
     line-height: 50px;
     margin: 0 10px;
     font-weight: 400;
 }
 
-.navigation:hover{
+.navigation:hover {
     color: #ccc;
 }
 
-.active{
+a.active {
     color: #ccc;
+    text-decoration: none;
 }
 
-.table{
+.table {
     margin-top: 30px;
 }
 
 
 
-tr,th{
+tr,
+th {
     text-align: center;
+    padding: auto;
 }
